# max

./: .env.example  .gitignore  AGENT.md  ANTIGRAVITY_PHYSICS_REPORT.md  CURSOR_PROJECT.md  DEPLOYED.md  DISTRIBUTED_HIVE.md  FLOGURU_CONFIG_NOTE.md  IMMEDIATE_DEPLOYMENT.md  IMPERIAL_DIRECTIVES.md  LAUNCH_CHECKLIST_MASTER.md  LAUNCH_NOW.md  LAUNCH_SEQUENCE.md  LEGION_OF_MAX.md  MAXIMUS_ARSENAL.md  MAXIMUS_EMPIRE_BLUEPRINT.md  MISSION_1_CLEANUP.md  MISSION_2_FRENCH_FIRST.md  MISSION_2_QUEBECOIS_FIRST.md  MISSION_3_OMNI_CHANNEL.md  MISSION_4_YOLO_WEBSITE.md  NETWORK_MAP.md  PHASE_1.5_HYBRID_SOVEREIGNTY.md  PHASE_1_SOVEREIGN_GATEWAY.md  PHASE_1_STATUS.md  PROJECT_KANBAN.md  QUICKSTART.md  README.md  SECURITY_TRIAGE.md  SEVEN_SEALS_MANIFEST.md  SOUL.md  STATUS_DASHBOARD.md  THE_CODEX.md  TONIGHT_CHECKLIST.md  TRIPLE_MISSION_COMMAND.md  WEBSITE_BUILD_PLAN.md  WEEK_1_EXECUTION.md  YOLO_SWARM_DIRECTIVE.md  cadet-diagnostic.bat  cadet-ollama.bat  (+36 more)
colony-swarm/: floguru-launch.yaml  sensor-bee.yaml
components/: CronStatusCard.tsx
docs/: COMPLIANCE.md  QUICKSTART.md
examples/: demo_browser.py  demo_chat_handler.py  demo_gurus.py
floguru-web/: index.html  styles.css
installers/: install-cadet-mac-en.sh  install-cadet-mac-es-mx.sh  install-cadet-mac-fr.sh  install-cadet-mac-pt-br.sh  install-cadet-windows-en.bat  install-cadet-windows-es-ar.bat  install-cadet-windows-es-mx.bat  install-cadet-windows-es-ve.bat  install-cadet-windows-fr.bat  install-cadet-windows-pt-br.bat
neurosphere/: README.md  index.html  package.json
sensor-bee/: README.md  config.yaml  scout.ts  (+2 more)
(+42 files in other folders)
